@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.3.3
 ------------------------
+ o support color=NULL in gheatmap, then no colored line will draw within the heatmap <2015-10-30, Fri>
  o add `angle` for also rectangular, so that it will be available for layout='rectangular' following by coord_polar() <2015-10-27, Tue>
  
 CHANGES IN VERSION 1.3.2
